gettext-macros/tests/ui/gettext/requires_at_least.stderr
error: requires at least a msgid string argument
 --> tests/ui/gettext/requires_at_least.rs:4:5
  |
4 |     gettext!();
  |     ^^^^^^^^^^
  |
  = note: this error originates in the macro `gettext` (in Nightly builds, run with -Z macro-backtrace for more info)
