gettext-macros/tests/ui/gettext/requires_at_least.rs
use gettext_macros::*;

fn main() {
    gettext!();
}
